# stock_analyst

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  project_review.md  pyproject.toml
.github/: copilot-instructions.md
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CI_CD_PLAN.md  ETHICS.md  SPEC_recommendations_discovery_workflow.md  USER_GUIDE.md  design_diagram.drawio  plan_rating_filter_by_db_status.md
scripts/: check_dcf_valuation.py  load_env_from_ssm.py  lookup_stock.py  rescrape_webpage_to_pdf.py  run_recommendation_workflow_for_url.py  run_recommendation_workflow_for_webpage_pdf.py  run_recommendations_workflow.py  run_tests.py  run_tracked_stock_batch.py  scheduler.py  update_recommended_stock.py  update_stale_market_prices.py  update_stocks_from_yfinance.py
src/: config.py  fin_config.py
tests/: test_batch_scheduler_db.py  test_calculate_historical_fcf_growth_rates.py  test_extract_stock_recommendations.py  test_extract_stock_recommendations_integration.py  test_fetch_webpage_content.py  test_job_dashboard.py  test_lookup_stock_integration.py  test_market_data_refresh_scope.py  test_process_run_history.py  test_recommendation_feedback.py  test_retrieve_nested_pages.py  test_risk_metrics.py  test_run_tracked_stock_batch.py  test_save_stock_recommendation_to_db.py  test_scheduler_startup.py  test_search_node_modes.py  test_stock_minority_interest_persistence.py  test_upsert_recommended_stock_from_input.py  test_validate_tickers_node.py  test_valuation.py  test_workflow_integration.py
(+71 files in other folders)
